update readme and add some style css

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>My First Nano App</title>
+    <style>
+      #main {
+        padding: 40px;
+        text-align: center;
+      }
+      button {
+        box-shadow: none;
+        border: 1px solid #4520e6;
+        background-color: #4520e6;
+        color: #fff;
+        font-size: 16px;
+        padding: 10px 20px;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      button:hover,
+      button:active,
+      button:focus {
+        border: 1px solid #3a1bc2;
+        background-color: #3a1bc2;
+      }
+    </style>
     <script type="module" src="main.js"></script>
   </head>
-  <body id="main">
-
-  </body>
+  <body id="main"></body>
 </html>
